2004-04-06  Jakub Steiner <jimmac@ximian.com>

	* 24x24/stock/net/stock_hyperlink.png: fix canvas size

2004-04-06  Jakub Steiner <jimmac@ximian.com>

	* 48x48/stock/generic/Makefile.am
	* 48x48/stock/generic/stock_autocompletion.png
	* 24x24/stock/net/Makefile.am
	* 24x24/stock/net/stock_hand-signed.png
	* 24x24/stock/net/stock_mail-accounts.png
	* 24x24/stock/net/stock_mail-handling.png
	* 24x24/stock/net/stock_message-display.png
	* 24x24/stock/generic/Makefile.am
	* 24x24/stock/generic/stock_autocompletion.png
	* 24x24/stock/generic/stock_calendar-and-tasks.png
	* 24x24/stock/generic/stock_color.png
	* 24x24/stock/document/Makefile.am
	* 24x24/stock/document/stock_certificate.png
	* 16x16/stock/net/Makefile.am
	* 16x16/stock/net/stock_color.png
	* 16x16/stock/net/stock_mail-accounts.png
	* 16x16/stock/net/stock_mail-handling.png
	* 16x16/stock/net/stock_message-display.png
	* 16x16/stock/generic/Makefile.am
	* 16x16/stock/generic/stock_autocompletion.png
	* 16x16/stock/generic/stock_calendar-and-tasks.png
	* 16x16/stock/document/Makefile.am
	* 16x16/stock/document/stock_certificate.png: various icons (for
	  Evo)

2004-03-29  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/gnome-mime-application-x-rar.png: labeled icon
	* 48x48/mimetypes/Makefile.am
	* 48x48/mimetypes/gnome-mime-text-x-vcard.png: (removed)
	* 48x48/mimetypes/gnome-mime-text-x-vcalendar.png: renamed
	
2004-03-29  Jakub Steiner <jimmac@ximian.com>

	* M 48x48/mimetypes/gnome-mime-application-x-cpio-compressed.png
	* 48x48/mimetypes/gnome-mime-application-x-cpio.png
	* 48x48/mimetypes/gnome-mime-application-x-lha.png
	* 48x48/mimetypes/gnome-mime-application-x-lhz.png
	* 48x48/mimetypes/gnome-mime-application-x-rar.png: let's not use
	  the old package. Some of these deserve a unique icon (future).

=== gnome-icon-theme 1.2.0 ===
	
2004-03-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Update to 1.2.0

2004-03-19  Jakub Steiner <jimmac@ximian.com>
